2015-02-20  William A. Perkins  <william.perkins@pnnl.gov>

	* plot_cgns.f90 (plot_cgns_setup, plot_cgns_write)
	(plot_cgns_file_close): close and reopen CGNS output between
	output time steps to preserve HDF-based integrity

2015-01-13  William A. Perkins  <william.perkins@pnnl.gov>

	* scalar_solve.f90 (apply_scalar_bc, scalar_solve): implement left
	bank concentration BC's

2015-01-06  William A. Perkins  <william.perkins@pnnl.gov>

	* test/transport/mixing/Makefile: make parallel

	* plot_cgns.f90 (plot_cgns_write): incorrect output of sediment
	bed mass per unit area; incorrect direction for particulate bed
	exchange 

	* scalars_source.f90 (scalar_source_post_timestep): particulate
	bed exchange variable needed putting

2014-08-14  William A. Perkins  <william.perkins@pnnl.gov>

	* test/transport/1d-analytic-1blk: make parallel and change
	picture to use gage data

	* test/transport/pointsource: make parallel and update so pictures
	can be made from CGNS output

	* test/transport/mixing: make parallel and update so pictures can
	be made from CGNS output

2014-06-30  William A. Perkins  <william.perkins@pnnl.gov>

	* bed.f90 (bed_particulate_exchange, bed_sediment_exchange): only
	report negative values when they are "bad"

2014-06-17  William A. Perkins  <william.perkins@pnnl.gov>

	* mass2_parallel.f90 (output): only print the scalar mass balance
	if there is one

2014-06-16  William A. Perkins  <william.perkins@pnnl.gov>

	* scalar_solve.f90 (transport_precalc): call to bedshear() no
	longer necessary 

	* bed.f90 (bed_initialize): remove extraneous put

	* hydro_solve.f90 (hydro): call block_hydro_update_bc() which
	contains all the stuff that used to be here

	* block_hydro_bc.f90 (block_hydro_update_bc): add routine that
	collects necessary tasks to prepare for a hydro iteration (BC,
	dead cells, etc.)

2014-06-13  William A. Perkins  <william.perkins@pnnl.gov>

	* plot_cgns.f90 (plot_cgns_write): used wrong index for collecting
	particulate 
